p3/conf/ArgoIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false" # Correct annotation placement
spec:
  rules:
  - host: localhost # Optional, required if you use a hostname
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
